[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/sprite_frames/Enemy.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/game/enemy_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/game/enemy_death.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 6, 6.5 )

[node name="Enemy" type="KinematicBody2D" groups=["Actor", "Enemy"]]
pause_mode = 1
position = Vector2( 0, -10 )
collision_layer = 2
collision_mask = 6
script = ExtResource( 2 )
speed = 35.0
knockback_speed = 60.0
attack_damage_min = 3.5
attack_damage_max = 13.5
starting_health = 100.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.68, 0.68 )
frames = ExtResource( 1 )
animation = "running_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 14 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.66
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -18.0

[node name="EnemyDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -14.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
